<resources>
    <string name="app_name" translatable="false">ShareLoc</string>
    <string name="author" translatable="false">©2018 Max Zonov</string>

    <!-- General strings -->

    <string name="bn_map">Карта</string>
    <string name="bn_location">Инф. о геолокации</string>

    <string name="notification_gps_searching">Поиск спутников GPS</string>

    <string name="toolbar_settings_title">Настройки</string>

    <string name="all_share_title">Отправить с помощью</string>

    <string name="all_google_maps_link" translatable="false">maps.google.com/maps?q=loc:%1$s,%2$s</string>
    <string name="all_yandex_maps_link" translatable="false">maps.yandex.ru/?text=%1$s,%2$s</string>

    <string name="all_address_error">Адрес не найден</string>

    <string name="all_latitude_intent_key" translatable="false">latitude</string>
    <string name="all_longitude_intent_key" translatable="false">longitude</string>
    <string name="all_address_intent_key" translatable="false">address</string>

    <string name="all_exit_button">Для выхода из приложения нажмите \"назад\" еще раз</string>

    <!-- Location screen -->

    <string name="location_get_button">Получить мою геолокацию</string>

    <string name="location_tv_coords">Координаты:</string>
    <string name="location_tv_latitude">Широта</string>
    <string name="location_tv_longitude">Долгота</string>
    <string name="location_tv_send">Отправить:</string>
    <string name="location_tv_address">Адрес</string>
    <string name="location_tv_message">Сообщение</string>
    <string name="location_tv_internet">Интернет</string>
    <string name="location_tv_google" translatable="false">Google Maps</string>
    <string name="location_tv_yandex">Яндекс.Карты</string>
    <string name="location_btn_search">Поиск</string>

    <string name="location_permission_denied">Требуется разрешение на получение местоположения</string>
    <string name="location_no_geo_received_message">Геолокация не определена</string>

    <string name="location_internet_wifi" translatable="false">Wi-Fi</string>
    <string name="location_no_internet">Соединение отсутствует</string>
    <string name="location_internet_error">Ошибка опредления связи</string>

    <!-- Map screen -->

    <string name="menu_map_satellite">Спутник</string>
    <string name="menu_map_hybrid">Гибрид</string>
    <string name="menu_map_map">Карта</string>

    <string name="bottom_sheet_i_am_here">Я нахожусь здесь</string>
    <string name="bottom_sheet_i_am_here_send">Я нахожусь здесь:</string>
    <string name="bottom_sheet_change_button">Изменить</string>

    <string name="bottom_sheet_listener_error">Невозможно перейти на экран информации</string>

    <!-- Settings -->

    <string name="settings_message_key" translatable="false">message</string>
    <string name="settings_tv_message">Текст сообщения</string>
    <string name="settings_language_label">Язык</string>
    <string name="settings_category_general_title">Общие настройки</string>
    <string name="settings_category_message_title">Настройки сообщения</string>
    <string name="settings_info_label">Информация</string>
    <string name="settings_about">О приложении</string>

    <string name="prefs_language_en_label" translatable="false">English</string>
    <string name="prefs_language_ru_label" translatable="false">Русский</string>

    <string name="prefs_language_en_country_code" translatable="false">US</string>
    <string name="prefs_language_ru_country_code" translatable="false">RU</string>

    <!-- SharedPreferences -->

    <string name="prefs_message_key" translatable="false">message</string>
    <string name="prefs_latitude_key" translatable="false">latitude</string>
    <string name="prefs_longitude_key" translatable="false">longitude</string>
    <string name="prefs_language_key" translatable="false">language</string>

    <string name="prefs_message_default">Я нахожусь здесь</string>
    <string name="prefs_latitude_default" translatable="false">0.0</string>
    <string name="prefs_longitude_default" translatable="false">0.0</string>

    <string name="prefs_language_en_value" translatable="false">en</string>
    <string name="prefs_language_ru_value" translatable="false">ru</string>

    <!-- License screen -->
    <string name="license_error">Ошибка отображения лицензии</string>

    <!-- About screen -->
    <string name="about_app_descr">Приложение для определения информации о месте, в котором вы находитесь и его передачи</string>
    <string name="about_github" translatable="false">GitHub</string>
    <string name="about_license_label">Лицензия кода (MIT)</string>
    <string name="about_github_link" translatable="false">https://github.com/max75758231/ShareLoc</string>

</resources>
