<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginRight="@dimen/activity_horizontal_spacing_16dp"
    android:layout_marginLeft="@dimen/activity_horizontal_spacing_16dp"
    android:layout_marginTop="@dimen/activity_vertical_spacing_24dp"
    android:layout_marginBottom="@dimen/activity_vertical_spacing_24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_location_getLocation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/location_btn_get_height"
                android:text="@string/location_get_button"
                android:layout_marginLeft="@dimen/location_btn_spacing"
                android:layout_marginRight="@dimen/location_btn_spacing"
                android:background="@drawable/btn_get_location_rounded"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_location_coords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/location_spacing_16dp"
                android:text="@string/location_tv_coords"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_location_getLocation"
                style="@style/BlackBoldText"/>

            <LinearLayout
                android:id="@+id/linearLayout_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/location_spacing_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_location_coords">

                <TextView
                    android:id="@+id/tv_location_latitude"
                    android:layout_width="@dimen/location_tv_width_110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_tv_latitude"
                    style="@style/BlackText"/>

                <TextView
                    android:id="@+id/tv_location_latitude_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="53.33333"
                    style="@style/BlackText"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/location_spacing_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_latitude">

                <TextView
                    android:id="@+id/tv_location_longitude"
                    android:layout_width="@dimen/location_tv_width_110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_tv_longitude"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_latitude"
                    style="@style/BlackText"/>

                <TextView
                    android:id="@+id/tv_location_longitude_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="53.33333"
                    style="@style/BlackText"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_message_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/location_spacing_16dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_longitude">

                <TextView
                    android:id="@+id/tv_location_send"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/location_tv_send"
                    android:layout_weight="1"
                    style="@style/BlackBoldText"/>

                <ImageView
                    android:id="@+id/iv_location_share"
                    android:layout_width="@dimen/location_iv_share_size"
                    android:layout_height="@dimen/location_iv_share_size"
                    android:paddingBottom="@dimen/location_iv_share_spacing_10dp"
                    android:paddingLeft="@dimen/location_iv_share_spacing_10dp"
                    android:paddingRight="@dimen/location_iv_share_spacing_10dp"
                    android:paddingTop="@dimen/location_iv_share_spacing_10dp"
                    app:srcCompat="@drawable/ic_share_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="226dp"
                android:layout_marginTop="@dimen/location_spacing_16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_message_send">

                <TextView
                    android:id="@+id/tv_location_message"
                    android:layout_width="@dimen/location_tv_width_110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_tv_message"
                    style="@style/BlackText"/>

                <TextView
                    android:id="@+id/tv_location_message_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Тестовое длинное"
                    style="@style/BlackText"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="226dp"
                android:layout_marginTop="@dimen/location_spacing_16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_message">

                <TextView
                    android:id="@+id/tv_location_address"
                    android:layout_width="@dimen/location_tv_width_110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_tv_address"
                    style="@style/BlackText"/>

                <TextView
                    android:id="@+id/tv_location_address_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="г.Киров, Театральная площадь"
                    style="@style/BlackText"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="226dp"
                android:layout_marginTop="@dimen/location_spacing_16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_address">

                <TextView
                    android:id="@+id/tv_location_google"
                    android:layout_width="@dimen/location_tv_width_110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_tv_google"
                    style="@style/BlackText"/>

                <TextView
                    android:id="@+id/tv_location_google_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/all_google_maps_link"
                    android:autoLink="all"
                    style="@style/BlackText"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_yandex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="226dp"
                android:layout_marginTop="@dimen/location_spacing_16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_google">

                <TextView
                    android:id="@+id/tv_location_yandex"
                    android:layout_width="@dimen/location_tv_width_110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_tv_yandex"
                    style="@style/BlackText"/>

                <TextView
                    android:id="@+id/tv_location_yandex_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/all_yandex_maps_link"
                    android:autoLink="all"
                    style="@style/BlackText"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>